# Libra

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_libra  build_libra.bat  libra-qt.pro  libra.pro  make  make.bat
asm/: interrupts.asm  print_numbers.asm
doc/: Makefile  changelog.rst  conf.py  doc.pro  index.rst  intro.rst  keyboard.rst  make.bat  peripherals.rst  screen.rst  timer.rst  using.rst
lib/gtest-1.6.0/: Makefile.in  aclocal.m4  configure
lib/gtest-1.6.0/fused-src/gtest/: gtest-all.cc
lib/gtest-1.6.0/msvc/: gtest.vcxproj  gtest_main.vcxproj  gtest_prod_test.vcxproj  gtest_unittest.vcxproj
lib/gtest-1.6.0/src/: gtest.cc
msvc10/: Libra.sln  Libra.vcxproj  Libra.vcxproj.filters  LibraTest.vcxproj  LibraTest.vcxproj.filters  msvc10_resources.rc
redist/: Makefile
redist/amd64/debian/DEBIAN/: control
redist/i386/debian/DEBIAN/: control
res/: Libra.icns  Resources.qrc  msvc10_resources.rc
src/: AddressOperand.cpp  AddressOperand.hpp  Breakpoint.cpp  Breakpoint.hpp  CmdTree.cpp  CmdTree.hpp  Config.h.in  IPeripheral.hpp  ImmediateOperand.hpp  InstTable.cpp  InstTable8086.cpp  Instruction.cpp  Instruction.hpp  Instruction8086.cpp  Instruction8086.hpp  MainWnd8086.cpp  MainWnd8086.hpp  MainWnd8086.ui  Makefile  MemWnd.cpp  MemWnd.hpp  MemWnd.ui  Memory.cpp  Memory.hpp  ModrmOperand.cpp  ModrmOperand.hpp  Operand.cpp  Operand.hpp  Peripheral.hpp  Prefix.cpp  Prefix.hpp  Processor.cpp  Processor.hpp  Processor8086.cpp  Processor8086.hpp  QInstructionList.cpp  QInstructionList.hpp  QKbdFilter.cpp  QKbdFilter.hpp  QMemModel.cpp  (+18 more)
src/opcodes/: Aaa.cpp  Aaa.hpp  Aad.cpp  Aad.hpp  Aam.cpp  Aam.hpp  Aas.cpp  Aas.hpp  Adc.cpp  Adc.hpp  Add.cpp  Add.hpp  AllOpcodes.hpp  And.cpp  And.hpp  CLSTX.cpp  CLSTX.hpp  Call.cpp  Call.hpp  Cbw.cpp  Cbw.hpp  Cmp.cpp  Cmp.hpp  CmpsX.cpp  CmpsX.hpp  Cwd.cpp  Cwd.hpp  Daa.cpp  Daa.hpp  Das.cpp  Das.hpp  Div.cpp  Div.hpp  Hlt.cpp  Hlt.hpp  IDiv.cpp  IDiv.hpp  IMul.cpp  IMul.hpp  In.cpp  (+67 more)
src/peripherals/: AllPeripherals.hpp  Keyboard.cpp  Keyboard.hpp  Screen.cpp  Screen.hpp  Timer.cpp  Timer.hpp
test/: Common.hpp  Makefile  TestInstruction.cpp
test/tests/: TestCmdTree.cpp  TestInstruction.cpp  TestInstruction8086.cpp
xcode/libra-qt.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
